argocd-resources/helloworld/helloworld-istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
  namespace: helloworld
spec:
  exportTo:
  - helloworld
  - istio-system
  hosts:
  - helloworld-k8s-1.fperod.internal
  - helloworld-k8s-2.fperod.internal
  gateways:
  - istio-system/ingressgateway
  http:
  - name: helloworld
    match:
    - uri:
        prefix: /hello
    route:
    - destination:
        host: helloworld.helloworld.svc.cluster.local
        port:
          number: 5000
      weight: 100
    - destination:
        host: helloworld-canary.helloworld.svc.cluster.local
        port:
          number: 5000
      weight: 0
